syntax = "proto3";

package user;

option go_package = "github.com/alibekkenny/simple-marketplace/shared/proto/genproto/user;user";

service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string role = 4; // e.g., "buyer", "supplier"
}

message RegisterResponse {
    int64 user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1; //JWT
}